# unilang

./: #sdf#  .cirrus.yml  .clang-tidy  .drone.yml  .gitattributes  .gitignore  .scrutinizer.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  _config.yml  a.out  about.md  appveyor.yml  asset-manifest.json  bazel  bazel_wrapper  build_everything  build_everything_with_docker  ci_build  clean_everything  codeship-services.yml  codeship-steps.yml  codeship.yml  docker_build_everything  docker_test_everything  format_build_files  imgui.ini  index.html  index.md  make  open_editor  shippable.yml  trunk  user_build  user_build_everything  user_clean  user_run  (+4 more)
source/: .bazel_downloader_config  .bazelrc  .bazelversion  .clang-tidy  BUILD  MODULE.bazel  README.md  WORKSPACE  imgui.BUILD  workspace.code-workspace
source/bazel/config/: bazelrc.clang_tidy  bazelrc.general  bazelrc.iwyu  bazelrc.remote  bazelrc.sanitizers  bazelrc.wasm
source/bazel/cookbook/: bootstrap_hcp.bzl  core.bzl  cpp_object.bzl  generate_unilang_token_files.bzl  hcp.bzl  make_symlink.bzl  other-experiment.bzl
source/bazel/toolchains/: toolchains.bzl
source/bazel/tools/: notes
source/code/: README.md  from deleted repos
source/code/bazel_refresh/: BUILD  bazel_refresher.hcp  dockerfile_refresher.hcp  main.cc
source/code/company/: README.md  Readme.md
source/code/config/: Readme.md
source/code/deploy/: BUILD  main.cpp  software_deployer.hcp
source/code/explore/: language_features.txt  notes.txt  todo.txt
source/code/external_builds/: BUILD  cuda.sh
source/code/ide/: BUILD  (+1 more)
(+12468 files in other folders)
